--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="org/rapla/jre/**" kind="src" path="gwt-src"/>
+	<classpathentry kind="src" path="gwt-rapla-src"/>
+	<classpathentry kind="src" path="generated"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/rapla"/>
