--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry excluding="org/rapla/jre/**" kind="src" path="gwt-src"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test-src"/>
+	<classpathentry kind="src" path="contracts-src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/rapla"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/aopalliance.jar"/>
@@ -14,5 +15,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jukito-1.4.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/c4j-6.0.0-for-java-8.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
