--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="lib" path="mockito-all-1.10.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="jukito-1.4.jar"/>
 	<classpathentry excluding="org/rapla/jre/**" kind="src" path="gwt-src"/>
 	<classpathentry kind="src" path="gwt-rapla-src"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/rapla"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
