--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="org/rapla/jre/**" kind="src" path="gwt-src"/>
+	<classpathentry kind="src" path="C4J-src"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test-src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/rapla"/>
@@ -14,5 +15,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jukito-1.4.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/DHBW_C4J/libs/c4j-6.0.0-for-java-8.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
